--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -5,21 +5,21 @@ schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum/contract
-    name: ConverterRegistryContract
-    network: xdai
+    name: Multicall
+    network: emerald-testnet
     source:
       address: "0x0ddff327ddf7fe838e3e63d02001ef23ad1ede8e"
-      abi: ConverterRegistryContract
-      startBlock: 11813490
+      abi: MulticallContract
+      startBlock: 1
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
       language: wasm/assemblyscript
       entities:
-        - ConverterAddition
+        - aggregate
       abis:
-        - name: ConverterRegistryContract
-          file: ./abis/ConverterRegistryContract.json
+        - name: MulticallContract
+          file: ./abis/MulticallContract.json
       blockHandlers:
         - handler: handleBlock
       file: ./src/mappings/blocks.ts
