--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -8,18 +8,18 @@ dataSources:
     name: Multicall
     network: emerald
     source:
-      address: "0x0ddff327ddf7fe838e3e63d02001ef23ad1ede8e"
-      abi: MulticallContract
+      address: "0xfb7a5Ca86Be70A359A43B5ad6bF47606f8B7F96B"
+      abi: FactoryContract
       startBlock: 512
     mapping:
-      kind: ethereum/function
+      kind: ethereum/events
       apiVersion: 0.0.3
       language: wasm/assemblyscript
       entities:
-        - aggregate
+        - PairCreated
       abis:
-        - name: MulticallContract
-          file: ./abis/MulticallContract.json
+        - name: FactoryContract
+          file: ./abis/FactoryContract.json
       blockHandlers:
         - handler: handleBlock
       file: ./src/mappings/blocks.ts
