--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -6,7 +6,7 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: FactoryContract
-    network: emerald
+    network: emerald-testnet
     source:
       address: "0x68E86D6fA7AD6f15690149F45b45B22a21B3DDdC"
       abi: FactoryContract
